* Added support for BandwagonHOST