@@ -87,7 +87,7 @@ platform :ios do
     load_keys
 
     deliver(
-      app_version: '0.0.7'
+      app_version: '0.0.8'
     )
   end
 
