@@ -1,3 +1,3 @@
- - 增加了对 BandwagonHOST 的支持
-   
-
+* 为 Vultr 添加了快照功能
+* 为 Vultr 添加的备份功能
+* 为 DigitalOcean 添加快照功能
