@@ -1,1 +1,3 @@
-* Added support for BandwagonHOST
+* Added support Snapshots for Vultr
+* Added support Backups for Vultr
+* Added support Snapshots for DigitalOcean
